# hidamari

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_ja.md  hidamari.conf
.cargo/: config
_contents/sounds/: wav2mp3.sh
_contents/theme/_common/: hidamari.js  hidamari_anime.js  setting.html  setting.js
_contents/theme/_default/: main.html  main.js
_contents/tsound/: wav2mp3.sh
_theme/_common/: hidamari.js  hidamari_anime.js  setting.html  setting.js
_theme/_default/: control.js  main.html  main.js  test.html
misc/: bluez_alsa.txt  cross.txt  dep.txt  minidlan.txt
src/: albumart.rs  asyncread.rs  bt.rs  btctrl.rs  config.rs  context.rs  event.rs  iolist.rs  main.old.rs  main.rs  mdpcom.rs  mpdcom.rs  mpdfifo.rs  task.rs  utils.rs  wssession.rs
src/_nouse/: task.rs  wssession.rs
