[package]
name = "hidamari"
version = "0.1.0"
authors = ["zuntan"]
edition = "2018"

description = "HIDAMARI mdp controler"
readme = "README.md"
homepage = "https://github.com/zuntan/hidamari"
repository = "https://github.com/zuntan/hidamari"
license = "MIT OR Apache-2.0"
keywords = [ "mpd", "music" ]

# categories = [ "command-line-interface" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"

warp        = "0.2"
tokio       = { version = "0.2.6", features = [ "full" ] }
log         = "0.4.8"
bytes       = "0.5"
lazy_static = "1.4.0"
regex       = "1"
serde       = { version = "1.0", features = ["derive"] }
toml        = "0.5"
serde_json  = "1.0"
json        = "0.12"
chrono      = { version = "0.4", features = ["serde"] }
num-complex = "0.3.0"
chfft       = "0.3.4"
libc        = "0.2.71"
