[package]
name = "hidamari"
version = "0.1.0"
authors = ["zuntan"]
edition = "2018"

description = "HIDAMARI mdp controler"
readme = "README.md"
homepage = "https://github.com/zuntan/hidamari"
repository = "https://github.com/zuntan/hidamari"
license = "MIT OR Apache-2.0"
keywords = [ "mpd", "music" ]

# categories = [ "command-line-interface" ]

[dependencies]
pretty_env_logger   = "0.4.0"
rand                = "0.7.3"
tokio               = { version = "0.2.6", features = [ "full" ] }
tokio-util          = "0.3.1"
futures             = { version = "0.3.5", default-features = false }
futures-util        = { version = "0.3.5", default-features = false }
hyper               = { version = "0.13", features = ["stream"] }
warp                = "0.2"
headers             = "0.3"
mime                = "0.3"
mime_guess          = "2.0.0"
log                 = "0.4.8"
bytes               = "0.5"
lazy_static         = "1.4.0"
regex               = "1"
serde               = { version = "1.0", features = ["derive"] }
toml                = "0.5"
serde_json          = "1.0"
serde_urlencoded    = "0.6.1"
json                = "0.12"
chrono              = { version = "0.4", features = ["serde"] }
num-complex         = "0.3.0"
chfft               = "0.3.4"
libc                = "0.2.71"
url                 = "2.1.1"
mp3-metadata        = "0.3.3"
alsa                = "0.4.2"
nix                 = "0.15.0"
lame-sys            = "0.1.2"
flac-sys            = "0.1.0"
dbus                = "0.8.4"
dbus-tokio          = "0.5.2"
dbus-crossroads     = "0.2.1"
async-trait         = "0.1.36"
